Fix scrolling issue on mobile

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ img {
 
 header {
     text-align: center;
-    margin: 5em auto;
+    margin: 1.5em auto;
 }
 
 .logo {
